name:                etcd
version:             0.0.1
synopsis:            Haskell etcd client 

description:         
  Haskell client for the etcd distributed data store.

license:             MIT
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           2013 (c) Joseph Abrahamson
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    System.Etcd
    System.Etcd.Types
  build-depends:       base >=4.6 && <4.7
                     , aeson
                     , mtl
                     , bytestring
                     , http-conduit
                     , text
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010